src/app/about-module/about/about.component.css
.image-holder.left {
    float: left;
    padding-right: 10px;
}

.image-holder.right {
    float: right;
    padding-left: 10px;
}

.about-us {
    height: 100%;
    overflow-y: auto;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.profile {
    height: 128px;
    width: 128px;
}

